--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@
     width:100%;
     height: 100%;
 }
-body{
+.body{
     min-width: 1100px;
+}
+body{
     font-family: 'Roboto', sans-serif;
 }
 .flex-cont{
@@ -122,55 +124,60 @@ h1{
 }
 
 .parent{
-    width: 60%;
-    height: 10%;
+    padding: 0px; /* Поля вокруг текста */
+    margin: auto; /* Выравниваем по центру */
     min-width: 600px;
     max-width:920px;
     background: white;
-    margin-left: 20%;
-    margin-top: 3%;
     display: flex;
-    flex-wrap: wrap;
+    width:50%;
+   
     /*flex-flow: column wrap; 
     flex-basis: auto; */
     
 }
 .big-img1{
-    background-color: white;
+    background-color: whiyte;
     width: 90%;
     height: 90%;
     top: -50px; 
+    margin-left: 0px;
+    margin-bottom: 40px;
+    margin-top: 40px;
 }
 .big-img2{
     background-color: white;
     height: 90%;
     width: 90%;
-    margin-top: -50px;
+    margin-top: -45px;
+    margin-left: 0px;
+
   
 }
 .cha-photo{
-    width: 57%;
-    height: 57%;
+    width: 50%;
+    height: 50%;
     background-color: white;
     display: flex;
     flex-wrap: wrap;
+    margin-left: 0px;
 }
 .cha-text{
     position: relative;
-    width: 41%;
-    background: rgba(196, 196, 196, 0.5);
+    width: 40%;
+    background: rgba(196, 196, 196, 0.8);
     text-align: left;
     position: relative;
-    margin-left:-67px;
+    margin-left:-60px;
 	padding-left: 40px;
-	padding-right: 40px;
+	padding-right: 35px;
 	padding-top: 10px;
 	padding-bottom: 60px;
-	margin-bottom: 70px;
-	margin-top: 40px;
+	margin-bottom: 0px;
+	margin-top: 20px;
 }
 .name2{
-    font-size: 120%;
+    font-size: 155%;
 }
 	
 .p2{
@@ -178,7 +185,7 @@ h1{
 	font-size: 9px;
 }
 .span2{
-    font-size: 16px;
+    font-size: 24px;
     color: black;
     font-weight: bold;
 }
@@ -205,4 +212,11 @@ h1{
 }
 a{
     color: blueviolet;
+}
+td{
+    border: 1px solid grey;
+}
+table{
+    border-collapse: collapse;
+    border: hidden; 
 }
