--- a/style.css
+++ b/style.css
@@ -1,222 +1,141 @@
-.big-cont{
-  
-    background-color: white;
-    width:100%;
-    height: 100%;
-}
-.body{
-    min-width: 900px;
-}
-body{
-    font-family: 'Roboto', sans-serif;
-}
-.flex-cont{
-    position: relative;
-    width: 100%;
-    height: 100%;
-    margin: 20px 0px;
-    background-color:white;
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0px;
-    text-align: left;
-    min-width: 50%;
-    max-width: 96%;
-    max-width: 2000px;
-    max-height: 1200px;
-    min-height: 500px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    flex-direction: row;
-}
-.flex-par{
-    position: relative;
-    height: 35%;
-    width: 40%;
-    background-color: white;
-    display: flex;
-    margin: 10px 20px 10px 20px;
-    flex-direction: column;
-    float: left;
-    padding: 0px;
-    text-align: left;
-    flex-direction: row ;
-    justify-content: center;
-    margin-left: 7%;
-}
-.flex-cha-photo{
-    height: 300px;
-    width: 300px;
-    background-color: white;
-    margin: 5px;
-    float: left;
-    padding: 0px;
-    text-align: left;
-    position: relative;
-    max-width: 120px;
-    min-width: 120px;
-    max-height: 140px;
-    min-height: 120px;
-}
-.flex-cha-text{
-    height: 100px;
-    width:300px;
-    background-color:white;
-    margin-left: 60px;
-    margin-right: 15px;
-    margin-top: 0px;
-    float: left;
-    padding: 0px;
-    text-align: left;
-}
-.flex-cha-tsena{
-    height: 25%;
-    width: 13%;
-    background-color: white;
-    margin: 5px;
-    padding: 0px;
-    margin-top: 15px;
-}
-.img{
-    
-    width: 169px;
-    height: 169px;
-   
-}
-.p{
-    opacity: 0.6;
-    margin: 0px;
-}
-.h3{
-    margin: 0px;
-	
-}
-
-.skidka{
-    background-color: blueviolet;
-    padding: 0px;
-    position: absolute;
-    left: 85%;
-    top: 15%;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    border-radius:100px ;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-}
-.name{
-    color: blueviolet;
+body {
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 20px;
     font-size: 16px;
-}
- h2, h3, h4, h5, p, b{
-    font-size: 13px;
-}
-.a{
-	text-decoration: none;
-}
-h1{
-    margin-left: 7%;
-    margin-bottom: 0px;
+    background: url("service/photos/hotpng9.png") no-repeat;
+    background-attachment: fixed;
+    /* fiksiruet izobrajenie na ekrane */
+    -moz-background-size: 100%;
+    /* Firefox 3.6+ */
+    -webkit-background-size: 100%;
+    /* Safari 3.1+ и Chrome 4.0+ */
+    -o-background-size: 100%;
+    /* Opera 9.6+ */
+    background-size: 100%;
+    /* Современные браузеры */
+    text-shadow: white 0 0 5px;
+    /* text-shadow: white 0.5px 0.5px 0, white -0.5px -0.5px 0, white -0.5px 0.5px 0, white 0.5px -0.5px 0; */
 }
 
-.parent{
-    padding: 0px; /* Поля вокруг текста */
-    margin: auto; /* Выравниваем по центру */
-    min-width: 600px;
-    max-width:920px;
-    background: white;
-    display: flex;
-    width:50%;
-   
-    /*flex-flow: column wrap; 
-    flex-basis: auto; */
-    
-}
-.big-img1{
-    background-color: whiyte;
-    width: 90%;
-    height: 90%;
-    top: -50px; 
-    margin-left: 0px;
-    margin-bottom: 40px;
-    margin-top: 40px;
-}
-.big-img2{
-    background-color: white;
-    height: 90%;
-    width: 90%;
-    margin-top: -45px;
-    margin-left: 0px;
-
-  
-}
-.cha-photo{
-    width: 50%;
-    height: 50%;
-    background-color: white;
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 0px;
-}
-.cha-text{
-    position: relative;
-    width: 40%;
-    background: rgba(196, 196, 196, 0.8);
-    text-align: left;
-    position: relative;
-    margin-left:-60px;
-	padding-left: 40px;
-	padding-right: 35px;
-	padding-top: 10px;
-	padding-bottom: 60px;
-	margin-bottom: 0px;
-	margin-top: 20px;
-}
-.name2{
-    font-size: 155%;
-}
-	
-.p2{
-    color: grey;
-	font-size: 9px;
-}
-.span2{
+h1 {
     font-size: 24px;
-    color: black;
-    font-weight: bold;
+    color: orangered;
 }
-.tr{
-    background-color: white;
-    width: 20%;
-	font-size: 10px;
-        }
-.tr:nth-child(2n){	
-	background: rgba(196, 196, 196, 0);
+
+ul.no-decoration {
+    list-style-type: none;
+    margin: 20px;
+    padding: 20px;
 }
-.tdcolor{
-	background: rgba(196, 196, 196, 0);
+
+a.member-url {
+    text-decoration: none;
+    padding: 20px;
+    display: inline-block;
+    width: 400px;
+    border: 1px solid orangered;
+    border-radius: 20px;
+    margin-bottom: 10px;
+    color: orangered;
 }
-.aback{
-	font-size: 10px;
-	position: absolute;
-	border-bottom: 5px;
-    position: absolute;
-    bottom: 30px;
+
+a.member-url:hover {
+    background: orangered;
+    color: white;
+    transition-duration: 0.5s;
+    padding-left: 30px;
+    padding-right: 30px;
+    text-shadow: white 0.4px 0.4px 0, white -0.4px -0.4px 0, white -0.4px 0.4px 0, white 0.4px -0.4px 0;
 }
-.artikul{
-	color: black;
+
+a.person-url {
+    text-decoration: none;
+    padding: 20px;
+    display: inline-block;
+    width: 400px;
+    border: 1px solid orangered;
+    border-radius: 20px;
+    margin-bottom: 10px;
+    color: orangered;
+    display: flex;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
 }
-a{
-    color: blueviolet;
+
+a.person-url:hover {
+    color: green;
+    border: 1px solid green;
+    transition-duration: 1s;
 }
-td{
-    border: 1px solid grey;
+
+a.queue-url {
+    text-decoration: none;
+    padding: 20px;
+    display: inline-block;
+    width: 95%;
+    border: 1px solid orangered;
+    border-radius: 20px;
+    color: orangered;
+    margin-top: 4px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
-table{
-    border-collapse: collapse;
-    border: hidden; 
+
+main {
+    width: 50%;
+    height: auto;
+    border: 1px solid orangered;
+    border-radius: 20px;
+    padding: 20px;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 400px;
+    max-width: 1200px;
+    background-image: repeating-linear-gradient(bottom, red, #ccc, blue);
+    background-image: -moz-repeating-linear-gradient(bottom, red, #ccc, blue);
+    background-image: -webkit-repeating-linear-gradient(bottom, red, #ccc, blue);
+    opacity: 0.9;
+}
+
+.main {
+    display: flex;
+    width: 400px;
+    border: 1px solid orangered;
+    border-radius: 20px;
+    padding: 20px;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.photo img {
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    -webkit-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+    background-image: radial-gradient(25% 30%, circle, red, yellow);
+    background-image: -moz-radial-gradient(25% 30%, circle, red, yellow);
+    background-image: -webkit-radial-gradient(25% 30%, circle, red, yellow);
+}
+
+.description {
+    margin-left: 20px;
+}
+
+.box {
+    text-align: center;
+}
+
+.rotateleft {
+    transform: rotate(-90deg);
+}
+
+.rotateright {
+    transform: rotate(90deg);
 }
